re PR fortran/39292 (ICE in gfc_conv_array_initializer, at fortran/trans-array.c:3884)

2009-03-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/39292
	* trans-array.c (gfc_conv_array_initializer): Convert all
	expressions rather than ICEing.

2009-03-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/39292
	* gfortran.dg/initialization_22.f90: New test.

From-SVN: r144694